home and layout screen changes

--- a/templates/commons/home.html
+++ b/templates/commons/home.html
@@ -8,7 +8,109 @@
 
 
 {% block body %}
-<div class="col container-fluid justify-content-center px-5">
+<div class="d-flex col container-fluid align-items-center justify-content-center pb-5" id="dashboard-body">
+    
+    <div class="row col-lg-11 justify-content-center">
+        <div class="d-flex mt-4">
+            <div class="col-lg-1">
+                <img class="img-fluid" src="{% static 'images/scherlok.jpeg' %}">
+            </div>
+            <div class="col-lg-11 d-flex justify-content-center align-items-center">
+                <div class="text-style-rso-30 text-center px-5 mx-5">
+                    "EDUCATION NEVER ENDS, WATSON. IT IS A SERIES OF LESSONS, WITH THE GREATEST FOR THE LAST."
+                </div>
+            </div>
+        </div>
+        <hr class="mt-3">
+        <div class="col-lg-11 d-flex px-5 pb-2">
+            <div class="d-flex align-items-center">
+                <i class="fa-solid fa-circle-question fa-3x" style="color: #FF6A2D;"></i>
+                <span class="text-style-rso-40 ms-3">HOW DOES SHERLOOK WORK?</span>
+            </div>
+        </div>
+        <div class="col-lg-11 d-flex">
+            <div class="col-lg-10 d-flex light-grey-box-shadow py-4 px-4">
+                <div class="col-lg-1">
+                    <div class="mx-auto text-style-rso-32" style="border-radius: 50%; width: 47px; height: 47px; line-height: 47px; background-color: #FF6A2D; color: white; text-align: center; vertical-align: middle;">1</div>
+                    <div style="height: 100px; border-left: 1px solid black; position: relative; left: 50%;"></div>
+                    <div class="mx-auto text-style-rso-32" style="border-radius: 50%; width: 47px; height: 47px; line-height: 47px; background-color: #FF6A2D; color: white; text-align: center; vertical-align: middle;">2</div>
+                    <div style="height: 100px; border-left: 1px solid black; position: relative; left: 50%;"></div>
+                    <div class="mx-auto text-style-rso-32" style="border-radius: 50%; width: 47px; height: 47px; line-height: 47px; background-color: #FF6A2D; color: white; text-align: center; vertical-align: middle;">3</div>
+                    <div style="height: 100px; border-left: 1px solid black; position: relative; left: 50%;"></div>
+                    <div class="mx-auto text-style-rso-32" style="border-radius: 50%; width: 47px; height: 47px; line-height: 47px; background-color: #FF6A2D; color: white; text-align: center; vertical-align: middle;">4</div>
+                    <div style="height: 100px; border-left: 1px solid black; position: relative; left: 50%;"></div>
+                    <div class="mx-auto text-style-rso-32" style="border-radius: 50%; width: 47px; height: 47px; line-height: 47px; background-color: #FF6A2D; color: white; text-align: center; vertical-align: middle;">5</div>
+                </div>
+                <div class="col-lg-11 ps-3">
+                    <div class="text-style-rso-30" style="line-height: 47px!important; vertical-align: middle;">
+                        EVERY MONTH DATABASE IS UPDATED WITH NEW INFO
+                    </div>
+                    <div class="text-style-qs-16" style="height: 100px; display: flex; align-items: center;">
+                        <div>
+                        COUNTLESS ENGINEERING EVENTS TAKE PLACE IN 1 YEAR. OUR PARTNERS ARE COLLECTING IMPORTANT AND VERIFIED INFO AT EACH OF THOSE EVENTS AND UPDATING THE DATABASE BRINGING YOU THE FRESHEST TALENTS 
+                        </div>
+                    </div>
+                    <div class="text-style-rso-30" style="line-height: 47px!important; vertical-align: middle;">
+                        GO TO SHERLLOK APP AND FIND A MATCH
+                    </div>
+                    <div class="text-style-qs-16" style="height: 100px; display: flex; align-items: center;">
+                        <div>
+                        OPEN THE APP IN THE DASHBOARD MENU AND START FILTERING UPCOMING STARS WHILE THEY ARE STILL PARTICIPATING UNIVERSITY. DATABASE IS FILLED WITH STUDENTS AND POST GRADUATE PEOPLE READY TO PERFORM ON NEXT LEVEL STAGE
+                        </div>
+                    </div>
+                    <div class="text-style-rso-30" style="line-height: 47px!important; vertical-align: middle;">
+                        CLICK CONNECT TO GET CONTACT INFO FOR LEAD
+                    </div>
+                    <div class="text-style-qs-16" style="height: 100px; display: flex; align-items: center;">
+                        <div>
+                        AFTER INSPECTING THE LEAD MORE THOROUGHLY AND READING THE VERIFICATIONS YOU CAN CONNECT TO DESIRED PERSON BY CLICKING CONNECT BUTTON. AFTER SPENDING SOME CREDITS YOU WILL GET ACCESS TO FULL CONTACT INFO AND MORE!
+                        </div>
+                    </div>
+                    <div class="text-style-rso-30" style="line-height: 47px!important; vertical-align: middle;">
+                        GET MORE DETAILED INFO TO FASTEN INTERVIEW CYCLE
+                    </div>
+                    <div class="text-style-qs-16" style="height: 100px; display: flex; align-items: center;">
+                        <div>
+                        WE AIM TO IMPROVE HR LIVES AND SAVE TIME BY PROVIDING ENOUGH IMPORTANT DATA FOR SPECIFIC ROLE TO FASTEN THE INTERVIEW CYCLE BY ALREADY VERIFYING IF THE SELECTED PERSON HAS TRULY COMPLETED THE ENDEAVOURS IN THEIR CV
+                        </div>
+                    </div>
+                    <div class="text-style-rso-30" style="line-height: 47px!important; vertical-align: middle;">
+                        HIRE YOUR PRODIGY!
+                    </div>
+                    <div class="text-style-qs-16" style="height: 100px; display: flex; align-items: center;">
+                        <div>
+                        THE REST IS UP TO YOU! AFTER BEING INFORMED ABOUT YOUR ASSET THOROUGHLY AND BY ASKING REAL QUESTIONS DURING INTERVIEW YOU WILL STAN YOUR EMPLOYEE BY TAKING INTEREST IN THEIR CAREER GIVING THEM MORE MOTIVATION TO ACCEPT YOUR OFFER
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-2 ps-4">
+                <div class="light-grey-box text-center px-4 py-4 mb-4" style="box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25); -moz-box-shadow: 0px 3px 3px rgb(0,0,0, 0.25); -webkit-box-shadow: 0px 3px 3px rgb(0,0,0, 0.25);">
+                    <div><button class="btn text-style-rso-25">LIBRARY</button></div>
+                </div>
+                <div class="light-grey-box-shadow text-center px-4 py-4 mb-4">
+                    <div><button class="btn text-style-rso-25">HELP</button></div>
+                </div>
+                <div class="light-grey-box-shadow text-center px-4 py-4 mb-4">
+                    <div><button class="btn text-style-rso-25">FAQ</button></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-11 d-flex justify-content-between mt-5 pt-4">
+            <img class="img-fluid" src="{% static 'images/porsche_digital.png' %}">
+            <img class="img-fluid" src="{% static 'images/rimac.png' %}">
+            <img class="img-fluid" src="{% static 'images/bugatti_rimac.png' %}">
+            <img class="img-fluid" src="{% static 'images/bornfight.png' %}">
+            <img class="img-fluid" src="{% static 'images/ferrari.png' %}">
+        </div>
+    </div>
+</div>
+
+
+
+
+
+<!-- <div class="col container-fluid justify-content-center px-5">
     <div class="row d-flex justify-content-center mt-4 pb-4">
         <div class="row justify-content-between align-items-center" style="width: 100%; max-height: 170px;">
             <div class="col-lg-1 col-sm-1">
@@ -78,5 +180,5 @@
     </div>
 
     
-</div>
+</div> -->
 {% endblock %}
