--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,6 +50,12 @@ input[id="cb1"] {
     border-radius: 20px;
 }
 
+.light-grey-box-shadow {
+    background-color: #F1F6F6;
+    border-radius: 20px;
+    box-shadow: 1px 3px 2px 1px rgba(0, 0, 0, 0.07), -1px 3px 2px 1px rgba(0, 0, 0, 0.07), 0px 3px 2px 1px rgba(0, 0, 0, 0.07);
+}
+
 .pink-box {
     background-color: #FFA8A8; 
     border-radius: 6px;
