--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -41,18 +41,41 @@
         <header>
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container-fluid px-5">
+                {% if request.user.is_authenticated %}
                 <div style="color: white;" class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent">
-                    <div class="d-flex">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}" style="font-family: 'Roboto'; font-size: 21.5px; font-weight: 700;">
-                            Home
-                        </a>
-                    </div>
-                    <div class="d-flex">
-                        <a class="nav-link active" aria-current="page" href="#" style="font-family: 'Racing Sans One'; font-weight: 400; font-size: 24px;">
+                    <div>
+                        <a class="nav-link active text-style-rso-24" aria-current="page" href="{% url 'home' %}" style="color: white;">
                             SHERLOOK 3000
                         </a>
                     </div>
-                    <div>
+                    <div class="d-flex align-items-center">
+                        <a class="nav-link active text-style-rso-22 px-3 py-1 me-2" aria-current="page" href="{% url 'home' %}" style="border: 1px solid white; border-radius: 20px; color: white;border: 1px solid white; border-radius: 20px; color: white;">
+                            DASHBOARD
+                        </a>
+                        <a class="nav-link active text-style-rso-22 px-3 py-1 ms-2 me-4" aria-current="page" href="" style="border: 1px solid white; border-radius: 20px; color: white;border: 1px solid white; border-radius: 20px; color: white;">
+                            SHERLOOK APP
+                        </a>
+                        <a class="nav-link active ms-3 me-2" aria-current="page" id="notification-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="NOTIFICATIONS" data-popover-content="#popover-notification" data-html="true">
+                            <i class="fa-regular fa-bell"></i>
+                        </a>
+                        <a class="nav-link active ms-2 me-2" aria-current="page" href="{% url 'payment' %}">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </a>
+                        <a class="nav-link active ms-2 me-2" aria-current="page" href="{% url 'profile' %}">
+                            <i class="fa-regular fa-user"></i>
+                        </a>
+                    </div>
+                    <!-- <div class="d-flex">
+                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}" style="font-family: 'Roboto'; font-size: 21.5px; font-weight: 700;">
+                            Home
+                        </a>
+                    </div> -->
+                    <!-- <div class="d-flex">
+                        <a class="nav-link active" aria-current="page" href="#" style="font-family: 'Racing Sans One'; font-weight: 400; font-size: 24px;">
+                            SHERLOOK 3000
+                        </a>
+                    </div> -->
+                    <!-- <div>
                         <div style="float: left; padding-right: 20px;" class="d-flex">
                             <a class="nav-link active" aria-current="page" href="{% url 'payment' %}">
                                 <i class="fa-solid fa-cart-shopping"></i>
@@ -63,8 +86,14 @@
                                 <i class="fa-regular fa-user"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
+                {% else %}
+                <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">
+                    <div class="text-style-rso-24" style="color: white;">SHERLOOK 3000</div>
+                </div>
+                {% endif %}
+                
             </div>
         </nav>
         </header>
