signup screen changes

--- a/templates/commons/home.html
+++ b/templates/commons/home.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="col-lg-2 ps-4">
-                <div class="light-grey-box text-center px-4 py-4 mb-4" style="box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25); -moz-box-shadow: 0px 3px 3px rgb(0,0,0, 0.25); -webkit-box-shadow: 0px 3px 3px rgb(0,0,0, 0.25);">
+                <div class="light-grey-box-shadow text-center px-4 py-4 mb-4">
                     <div><button class="btn text-style-rso-25">LIBRARY</button></div>
                 </div>
                 <div class="light-grey-box-shadow text-center px-4 py-4 mb-4">
