--- a/templates/commons/signup.html
+++ b/templates/commons/signup.html
@@ -63,7 +63,8 @@
             }
 
             .navbar-custom {
-                background-image: linear-gradient(to right, #ED1C24 , #FF6B2C);
+                background-color: #FF6B2C;
+                /* background-image: linear-gradient(to right, #ED1C24 , #FF6B2C); */
                 height: 86px;
                 color: white;
             }
@@ -191,11 +192,7 @@
                     <div class="container-fluid">
                         <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
                             <div class="navbar-nav ms-auto">
-                                <div class="nav-item ms-auto">
-                                    <a class="nav-link active" aria-current="page" href="#">
-                                        <i style="color: white;" class="fa-regular fa-user"></i>
-                                    </a>
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
